--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tagcloud": "^2.3.3",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
